--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<div class="body">
-	<div class="header"><a href="index.com">HOME	|	</a>
-	<a href="resume.com">RESUME	|	
-	<a href="bio.com">BIOGRAPHY</a>
+	<div class="header"><a href="index.html">HOME	|	</a>
+		<a href="resume.html">RESUME	|	</a>
+	<a href="bio.html">BIOGRAPHY</a>
 	</div>
 	<div class="nama"> Hi, Guys </div>
 	<div class="nama">I'm Indah</div>
