--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -11,7 +11,7 @@
 		<a href="bio.html">BIOGRAPHY</a>
 		</div>
 	<div class="body1">
-		  <fieldset id="leg">
+		  <fieldset class="leg">
 		  	
 		    <legend id="edu">Profile</legend>
 		    <p>Nama 			: 	Sholikhah Indah Widiyanti </p>
@@ -21,14 +21,14 @@
 		    <p>Email			:	menikah.muda.yuk@gamil.com</p>
 		  </fieldset>
 		  <br>
-		  <fieldset id="leg">
+		  <fieldset class="leg">
 		  	<legend id="edu">Education</legend>
 		  	<p>SD</p>
 		  	<p>SMP</p>
 		  	<p>SMK</p>	
 		  </fieldset>
 		  <br>
-		  <fieldset id="leg">
+		  <fieldset class="leg">
 		  	<legend id="edu">Skills</legend>
 		  	<p>Web Design 90% [Amin]</p>
 		  	<p>Java	90% [Amin]</p>
@@ -36,13 +36,13 @@
 
 		  </fieldset>
 		  <br>
-		  <fieldset id="leg">
+		  <fieldset class="leg">
 		  	<legend id="edu">Activity</legend>
 		  	<p>Basketball</p>
 		  	<p>Sleeper</p>	
 		  </fieldset>
 		  <br>
-		  <fieldset id="leg">
+		  <fieldset class="leg">
 		  <legend id="edu">Professional Experience</legend>
 		  	<p>ga mau sombong</p>
 		  	<p></p>	
