--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
+	<title> portfolio </title>
 </head>
 <body>
 	<div class="body">
