--- a/index.html
+++ b/index.html
@@ -1,38 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>coba</title>
+	<title>welcom-Indah2</title>
 <style>
 body {background-color: white;}
 h2  {
     color: black;
-    font-family: Blenda Script;
+    font-family: 'PT Sans', sans-serif;
     font-size: 200%;
+	text-align="center";
 }
+
+.odd {
+    box-shadow : 5px 5px 20px;
+    cursor : pointer;
+	}
 </style>
 </head>
 <body>
-	<h2><b> Cara Membuat Telur Dadar Lezat </b></h2>
-	<p> <img src = "telurdadar.jpg"> </p>
-	<br> <p > Bahan Membuat Telur Dadar :</p>
-	<p align = center> 
-		<ul style = list-style-type:disc >
-			<li>3 butir telur</li>
-			<li>1 sdm Margarin</li>
-			<li>4 bawang merah cincang halus </li>
-			<li>2 cabai merah keriting/cabai rawit potong bulat tipis-tipis</li>
-			<li>Batang daun bawang di iris halus (sesuai selera) </li>
-			<li>1/4 sdt lada</li>
-			<li>1/4 sdt garam (sesuai selera)</li>
-		</ul>
-	</p>
-	<p> Cara Membuat Telur dadar :</p>
-	<ol style= list-style-type:1>
-		<li>Campur semua bahan di atas</li>
-		<li>Kocok semua bahan hingga merata</li>
-		<li>Panaskan Margarin</li>
-		<li>Goreng dan dadar hingga kuning keemasan (matang) </li>
-		<li>Selesai dan siap di hidangkan</li>
-	</ol>
+	<h1> Hello </h1>
+	<img src="ood.png" class="odd">
 </body>
 </html>
